# scaper-ai

./: .gitignore  .pre-commit-config.yaml  README.md  chat.py  docker-compose.yml  example.env  main.py  pyproject.toml
examples/: example_rag.ipynb
scripts/: 01_scrape_caresheets.py  02_populate_vector_store.py
src/scaper_ai/: __init__.py  config.py  retrieval.py
