[project]
name = "scaper-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Cameron", email = "cameronwood858@googlemail.com" }]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "gradio>=6.18.0",
    "httpx>=0.28.1",
    "langchain>=1.3.8",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyprojroot>=0.3.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "invoke>=3.0.3",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
